# minic-compiler

./: .gitignore
antlr/: CMakeLists.txt  Expr.g4  README.md  main.cpp
antlr/includes/: Exception.h  Utilities.h
antlr/includes/ast/: Types.h  ast.h
antlr/includes/ast/visitors/: AstVisitorBase.h  CodegenVisitor.h  DeclarationCheckingVisitor.h  TypeCheckingVisitor.h
antlr/includes/codegen/: CodegenUtils.h  LLVMConstructs.h
antlr/includes/mixins/: SingletonMixin.h
antlr/includes/parse_tree/: BuildAstVisitor.h
antlr/includes/symbol_table/: SymbolTable.h  Types.h
antlr/parser/: CMakeLists.txt
antlr/tests/: Expr.g4  Makefile  parser_test.sh
task1/: prog1.mc  prog10.mc  prog11.mc  prog12.mc  prog2.mc  prog3.mc  prog4.mc  prog5.mc  prog6.mc  prog8.mc  prog9.mc
tests/: test0.mc  test1.mc  test2.mc
